--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,27 @@
 {
-  "name": "Image Clipper",
-  "version": "0.0.1",
-  "description": "Exine Lab AI image clipper for Mozila Firefox Bugzila",
+  "name": "ExineLab Bugzilla RecSys",
+  "version": "0.0.3",
+  "description": "A Google Chrome extension that recommends (predicts) the image type to attach with bug report created in Firefox Bugzilla incident report system.",
   "manifest_version": 3,
+  
   "background": {
     "service_worker": "background.js"
   },
   "permissions": [
+    "activeTab",
+    "tabCapture",
     "desktopCapture",
     "downloads",
     "tabs",
     "scripting",
     "storage"
   ],
-
+  
   "action": {
-    "default_title": "Capture a Screenshot",
+    "default_title": "ExineLab Bugzilla RecSys",
     "default_popup": "fetchFormData.html"
   },
-  "host_permissions": ["*://bugzilla.mozilla.org//*"],
+  "host_permissions": ["<all_urls>"],
   "icons": {
     "16": "/assets/icon-16.png",
     "32": "/assets/icon-32.png",
@@ -29,7 +32,7 @@
     {
       "matches": ["<all_urls>"],
       "match_origin_as_fallback": true,
-      "js": ["fetchFormData.js", "capture_imgs.js"]
+      "js": ["scripts/fetchFormData.js"]
     }
   ]
 }
